--- a/SLBr/SLBr/Resources/Credits.html
+++ b/SLBr/SLBr/Resources/Credits.html
@@ -113,7 +113,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
         }
 
         input + label::after {
-            content: "show license";
+            content: "Show License";
             cursor: pointer;
         }
 
@@ -122,7 +122,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
         }
 
         input:checked + label::after {
-            content: "hide license";
+            content: "Hide License";
             cursor: pointer;
         }
     </style>
@@ -132,11 +132,11 @@ Use of this source code is governed by a GNU license that can be found in the LI
     <div style="clear:both; overflow:auto;">
         <div class="product">
             <span class="title">SLBr</span>
-            <span class="homepage"><a target="_blank" href="https://github.com/SLT-World/SLBr/">homepage</a></span>
+            <span class="homepage"><a target="_blank" href="https://github.com/SLT-World/SLBr/">Homepage</a></span>
             <input type="checkbox" hidden id="0" />
             <label class="show" for="0" tabindex="0"></label>
             <div class="licence">
-                <pre>SLBr. The new, clean, lightweight .NET Web browser.
+                <pre>SLBr. The browser that prioritizes a faster web.
 Copyright (C) 2022 SLT World
 
 This program is free software: you can redistribute it and/or modify
@@ -158,7 +158,7 @@ GNU General Public License for more details.</pre>
         <!-- SLBr appreciates the listed projects -->
         <div class="product">
             <span class="title">.NET Runtime</span>
-            <span class="homepage"><a target="_blank" href="https://github.com/dotnet/runtime/">homepage</a></span>
+            <span class="homepage"><a target="_blank" href="https://github.com/dotnet/runtime/">Homepage</a></span>
             <input type="checkbox" hidden id="1" />
             <label class="show" for="1" tabindex="0"></label>
             <div class="licence">
@@ -189,7 +189,7 @@ SOFTWARE.</pre>
         </div>
         <div class="product">
             <span class="title">Windows Presentation Foundation</span>
-            <span class="homepage"><a target="_blank" href="https://docs.microsoft.com/en-us/visualstudio/designers/getting-started-with-wpf/">homepage</a></span>
+            <span class="homepage"><a target="_blank" href="https://docs.microsoft.com/en-us/visualstudio/designers/getting-started-with-wpf/">Homepage</a></span>
             <input type="checkbox" hidden id="2" />
             <label class="show" for="2" tabindex="0"></label>
             <div class="licence">
@@ -219,44 +219,44 @@ SOFTWARE.</pre>
             </div>
         </div>
         <!--<div class="product">
-            <span class="title">The Chromium Project</span>
-            <span class="homepage"><a target="_blank" href="https://www.chromium.org/">homepage</a></span>
-            <input type="checkbox" hidden id="2" />
-            <label class="show" for="2" tabindex="0"></label>
-            <div class="licence">
-<pre>// Copyright 2015 The Chromium Authors. All rights reserved.
-// Copyright (C) Microsoft Corporation. All rights reserved.
-//
-// Redistribution and use in source and binary forms, with or without
-// modification, are permitted provided that the following conditions are
-// met:
-//
-//    * Redistributions of source code must retain the above copyright
-// notice, this list of conditions and the following disclaimer.
-//    * Redistributions in binary form must reproduce the above
-// copyright notice, this list of conditions and the following disclaimer
-// in the documentation and/or other materials provided with the
-// distribution.
-//    * The name of Google Inc, Microsoft Corporation, or the names of its
-// contributors may not be used to endorse or promote products derived from
-// this software without specific prior written permission.
-//
-// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
-            </div>
-        </div>-->
+                <span class="title">The Chromium Project</span>
+                <span class="homepage"><a target="_blank" href="https://www.chromium.org/">Homepage</a></span>
+                <input type="checkbox" hidden id="2" />
+                <label class="show" for="2" tabindex="0"></label>
+                <div class="licence">
+    <pre>// Copyright 2015 The Chromium Authors. All rights reserved.
+    // Copyright (C) Microsoft Corporation. All rights reserved.
+    //
+    // Redistribution and use in source and binary forms, with or without
+    // modification, are permitted provided that the following conditions are
+    // met:
+    //
+    //    * Redistributions of source code must retain the above copyright
+    // notice, this list of conditions and the following disclaimer.
+    //    * Redistributions in binary form must reproduce the above
+    // copyright notice, this list of conditions and the following disclaimer
+    // in the documentation and/or other materials provided with the
+    // distribution.
+    //    * The name of Google Inc, Microsoft Corporation, or the names of its
+    // contributors may not be used to endorse or promote products derived from
+    // this software without specific prior written permission.
+    //
+    // THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+    // "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+    // LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+    // A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+    // OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+    // SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+    // LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+    // DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+    // THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+    // (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+    // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
+                </div>
+            </div>-->
         <div class="product">
             <span class="title">CEF</span>
-            <span class="homepage"><a target="_blank" href="https://bitbucket.org/chromiumembedded/cef/">homepage</a></span>
+            <span class="homepage"><a target="_blank" href="https://bitbucket.org/chromiumembedded/cef/">Homepage</a></span>
             <input type="checkbox" hidden id="3" />
             <label class="show" for="3" tabindex="0"></label>
             <div class="licence">
@@ -293,7 +293,7 @@ SOFTWARE.</pre>
         </div>
         <div class="product">
             <span class="title">CefSharp</span>
-            <span class="homepage"><a target="_blank" href="https://cefsharp.github.io/">homepage</a></span>
+            <span class="homepage"><a target="_blank" href="https://cefsharp.github.io/">Homepage</a></span>
             <input type="checkbox" hidden id="4" />
             <label class="show" for="4" tabindex="0"></label>
             <div class="licence">
@@ -329,6 +329,90 @@ SOFTWARE.</pre>
 // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</pre>
             </div>
         </div>
+        <div class="product">
+            <span class="title">Html Agility Pack</span>
+            <span class="homepage"><a target="_blank" href="https://html-agility-pack.net/">Homepage</a></span>
+            <input type="checkbox" hidden id="5" />
+            <label class="show" for="5" tabindex="0"></label>
+            <div class="licence">
+                <pre>The MIT License (MIT)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.</pre>
+            </div>
+        </div>
+        <div class="product">
+            <span class="title">Newtonsoft Json</span>
+            <span class="homepage"><a target="_blank" href="https://www.newtonsoft.com/json">Homepage</a></span>
+            <input type="checkbox" hidden id="6" />
+            <label class="show" for="6" tabindex="0"></label>
+            <div class="licence">
+                <pre>The MIT License (MIT)
+
+Copyright (c) 2007 James Newton-King
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.</pre>
+            </div>
+        </div>
+        <!--<div class="product">
+            <span class="title">PureJS Datalist Polyfill</span>
+            <span class="homepage"><a target="_blank" href="https://github.com/Fyrd/purejs-datalist-polyfill">Homepage</a></span>
+            <input type="checkbox" hidden id="7" />
+            <label class="show" for="7" tabindex="0"></label>
+            <div class="licence">
+                <pre>The MIT License (MIT)
+
+Copyright (c) 2013 Alexis Deveria
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of
+this software and associated documentation files (the "Software"), to deal in
+the Software without restriction, including without limitation the rights to
+use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
+the Software, and to permit persons to whom the Software is furnished to do so,
+subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
+FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
+COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</pre>
+            </div>
+        </div>-->
     </div>
 </body>
 </html>
