--- a/SLBr/SLBr/Resources/License.html
+++ b/SLBr/SLBr/Resources/License.html
@@ -11,7 +11,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
     </head>
     <body>
         <pre>
-SLBr. The new, clean, lightweight .NET Web browser.
+SLBr. The browser that prioritizes a faster web.
 Copyright (C) 2022 SLT World
 
 This program is free software: you can redistribute it and/or modify
