--- a/SLBr/SLBr/Resources/NewTab.html
+++ b/SLBr/SLBr/Resources/NewTab.html
@@ -5,16 +5,20 @@
     <meta charset="utf-8" />
     <title>New Tab</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <!--<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <div class="Center NewTabSearchContainer">
         <div>
-            <h1 class="Center">SLBr</h1>
+            <!--<h1 class="Center">SLBr</h1>-->
+            <div class="Center" style="padding-bottom: 25px;">
+                <img class="Center SLBrIcon" style="user-select: none;" src="./SLBr.ico" width="100" height="100" />
+            </div>
             <div class="Search">
                 <div class="SearchInput">
-                    <!--<span class="material-icons">search</span>-->
-                    <input type="text" id="SearchField" />
+                    <!--<a title="tooltip_text">Contents</a>-->
+                    <span class="material-icons" style="user-select: none;">search</span>
+                    <input type="text" id="SearchField"/>
                 </div>
             </div>
         </div>
